# starry-mix

./: .gitignore  .gitmodules  1  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: io.rs  lib.rs  mm.rs  ptr.rs  signal.rs  sockaddr.rs  socket.rs  task.rs  time.rs
api/src/file/: epoll.rs  event.rs  fs.rs  loop_device.rs  mod.rs  net.rs  pidfd.rs  pipe.rs  stdio.rs
api/src/imp/: futex.rs  mod.rs  net.rs  resources.rs  signal.rs  sys.rs  time.rs
api/src/imp/fs/: ctl.rs  event.rs  fd_ops.rs  io.rs  mod.rs  mount.rs  pipe.rs  stat.rs
api/src/imp/fs/io_mpx/: mod.rs  poll.rs
api/src/imp/io_mpx/: poll.rs  select.rs
api/src/imp/ipc/: mod.rs  shm.rs  util.rs
api/src/imp/mm/: brk.rs  mmap.rs
api/src/imp/net/: io.rs  mod.rs  name.rs  opt.rs  socket.rs
api/src/imp/task/: clone.rs  ctl.rs  execve.rs  exit.rs  job.rs  mod.rs  schedule.rs  thread.rs  wait.rs
api/src/syscall/: futex.rs  mod.rs  resources.rs  signal.rs  sys.rs  time.rs
api/src/syscall/fs/: ctl.rs  event.rs  fd_ops.rs  io.rs  memfd.rs  mod.rs  mount.rs  pidfd.rs  pipe.rs  stat.rs
api/src/syscall/io_mpx/: epoll.rs  mod.rs  poll.rs  select.rs
api/src/syscall/ipc/: mod.rs  shm.rs
api/src/syscall/mm/: mmap.rs  mod.rs
api/src/syscall/net/: cmsg.rs  io.rs  mod.rs  name.rs  opt.rs  socket.rs
api/src/syscall/sync/: futex.rs  membarrier.rs  mod.rs
api/src/syscall/task/: clone.rs  ctl.rs  execve.rs  exit.rs  job.rs  mod.rs  schedule.rs  thread.rs  wait.rs
api/src/terminal/: job.rs  ldisc.rs  mod.rs  termios.rs
api/src/vfs/: mod.rs  proc.rs  sys.rs  tmp.rs
api/src/vfs/dev/: event.rs  fb.rs  log.rs  loop.rs  memtrack.rs  mod.rs  rtc.rs  tty.rs
api/src/vfs/dev/tty/: ntty.rs  ptm.rs  pts.rs  pty.rs
apps/libc/: testcase_list
apps/libc/c/mmap/: mmap.c
apps/libc/c/shm/: shm.c
config/: Cargo.toml
config/src/: aarch64.rs  lib.rs  loongarch64.rs  x86_64.rs
core/: Cargo.toml
core/src/: futex.rs  lib.rs  mm.rs  resources.rs  shm.rs  task.rs  terminal.rs  time.rs
core/src/config/: loongarch64.rs  mod.rs  x86_64.rs
core/src/task/: stat.rs
core/src/terminal/: job.rs  ldisc.rs  mod.rs  termios.rs
core/src/vfs/: dev.rs  dir.rs  dynamic.rs  etc.rs  file.rs  fs.rs  mod.rs  proc.rs  tmp.rs
core/src/vfs/dev/: memtrack.rs  rtc.rs  tty.rs
core/src/vfs/simple/: dev.rs  dir.rs  file.rs  fs.rs  mod.rs
docs/: fs.md
scripts/: config.toml.temp  update-2k1000la.sh  update-vf2.sh
scripts/make/: oscomp.mk
src/: entry.rs  init.sh  main.rs  mm.rs  syscall.rs
src/test/: alpine.sh  final.sh  mod.rs  on-site.sh  pre.sh
