[package]
name = "starry-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true

axbacktrace.workspace = true
axconfig.workspace = true
axdriver.workspace = true
axfs-ng.workspace = true
axfs-ng-vfs.workspace = true
axio.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axnet.workspace = true
axsync.workspace = true
axtask.workspace = true

axprocess.workspace = true
axsignal.workspace = true

axerrno.workspace = true
bitflags.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys = { workspace = true, features = ["ioctl", "loop_device"] }
memory_addr.workspace = true
scope-local.workspace = true
spin.workspace = true

starry-core.workspace = true

bitmaps = { version = "3.2.1", default-features = false }
chrono = { version = "0.4.41", default-features = false }
flatten_objects = "0.2.4"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
num_enum = { version = "0.7", default-features = false }
page_table_multiarch = "0.5"
page_table_entry = "0.5"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
