[package]
name = "starry-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true

axconfig.workspace = true
axfs-ng.workspace = true
axfs-ng-vfs.workspace = true
axio.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axnet.workspace = true
axsync.workspace = true
axtask.workspace = true

starry-core.workspace = true

axbacktrace.workspace = true
axerrno.workspace = true
axprocess.workspace = true
bitflags.workspace = true
bitmaps = { version = "3.2.1", default-features = false }
cfg-if.workspace = true
flatten_objects = "0.2.4"
linkme.workspace = true
linux-raw-sys = { workspace = true, features = ["ioctl", "loop_device"] }
memory_addr.workspace = true
num_enum = { version = "0.7", default-features = false }
percpu = "0.2.0"
scope-local.workspace = true
spin.workspace = true
starry-signal.workspace = true
syscalls = { git = "https://github.com/jasonwhite/syscalls.git", rev = "92624de", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
