[package]
name = "starry-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
track = ["axfeat/backtrace", "axalloc/tracking"]

[dependencies]
axfeat.workspace = true
axalloc.workspace = true
axbacktrace.workspace = true
axconfig.workspace = true
axfs-ng.workspace = true
axfs-ng-vfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axsync.workspace = true
axtask.workspace = true

axprocess.workspace = true
axsignal.workspace = true

axerrno.workspace = true
cfg-if.workspace = true
extern-trait.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
memory_addr.workspace = true
scope-local.workspace = true
spin.workspace = true

gimli = { version = "*", default-features = false }
indoc = "2"
inherit-methods-macro = "0.1.0"
kernel-elf-parser = { git = "https://github.com/Starry-Mix-THU/kernel_elf_parser.git", rev = "3b99715" }
lock_api = "0.4.13"
percpu = "0.2.0"
rand = { version = "0.9.1", default-features = false, features = [
    "alloc",
    "small_rng",
] }
slab = { version = "0.4.9", default-features = false }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
weak-map = "0.1.1"
xmas-elf = "0.9"

[target.'cfg(not(any(target_arch = "aarch64", target_arch = "loongarch64")))'.dependencies]
axmm = { workspace = true, features = ["copy-from"] }
